--- a/style.css
+++ b/style.css
@@ -1,1 +1,16 @@
+body{
+    background-color:ghostwhite; text-align: justify;
+   }
+   
+   h1 {
+       color: blueviolet; text-align: center; font-size: 60px;
+   }
+   
+   h2 {
+       color: coral; text-align: center; font-size: 40px;
+   }
+   
+   p {
+       text-align: start; font-size: 35px; color: midnightblue;
+   }
 
